// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pile 2 players 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 10px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c2 {
  max-width: 80px;
}

.c1 {
  display: block;
  max-width: 200px;
  text-align: center;
  width: 100%;
}

.c4 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 25px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div>
        <img
          aria-label="QH"
          class="c2"
          src="image"
        />
      </div>
      <div
        class="c3 c4"
      >
        <div />
        <div />
      </div>
      <div
        style="margin-top: 25px;"
      >
        <img
          aria-label="JH"
          class="c2"
          src="image"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Pile 3 players 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 10px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c2 {
  max-width: 80px;
}

.c1 {
  display: block;
  max-width: 200px;
  text-align: center;
  width: 100%;
}

.c4 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 25px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div>
        <img
          aria-label="QH"
          class="c2"
          src="image"
        />
      </div>
      <div
        class="c3 c4"
      >
        <div>
          <img
            aria-label="KH"
            class="c2"
            src="image"
          />
        </div>
        <div />
      </div>
      <div
        style="margin-top: 25px;"
      >
        <img
          aria-label="JH"
          class="c2"
          src="image"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Pile 4 players 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 10px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c2 {
  max-width: 80px;
}

.c1 {
  display: block;
  max-width: 200px;
  text-align: center;
  width: 100%;
}

.c4 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 25px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div>
        <img
          aria-label="QH"
          class="c2"
          src="image"
        />
      </div>
      <div
        class="c3 c4"
      >
        <div>
          <img
            aria-label="KH"
            class="c2"
            src="image"
          />
        </div>
        <div>
          <img
            aria-label="AH"
            class="c2"
            src="image"
          />
        </div>
      </div>
      <div
        style="margin-top: 25px;"
      >
        <img
          aria-label="JH"
          class="c2"
          src="image"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Pile 4 players inline 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 10px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c2 {
  max-width: 80px;
}

.c1 {
  display: block;
  max-width: auto;
  text-align: center;
  width: 100%;
}

.c4 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 25px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div>
        <div
          style="display: flex; justify-content: space-around;"
        >
          <img
            aria-label="QH"
            class="c2"
            src="image"
          />
          <img
            aria-label="KH"
            class="c2"
            src="image"
          />
          <img
            aria-label="AH"
            class="c2"
            src="image"
          />
        </div>
      </div>
      <div
        class="c3 c4"
      >
        <div />
        <div />
      </div>
      <div
        style="margin-top: 25px;"
      >
        <img
          aria-label="JH"
          class="c2"
          src="image"
        />
      </div>
    </div>
  </div>
</div>
`;
